[package]
name = "graph-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
eframe = "0.21.3"
egui = "0.21.0"
iced = { version = "0.8.0", features = ["canvas"] }
rand = "0.8.5"
